--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 title: My website
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Personal Home Page
 
 # Your name to show in the footer
-author: Some Person
+author: Mourad Ouzzani
 
 # --- List of links in the navigation bar --- #
 
