--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: Mourad Ouzzani's Personal website
 
 # Short description of your site
 description: Personal Home Page
@@ -38,25 +38,18 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  rss: true
-#  reddit: yourname
-#  linkedin: daattali
+  email: "mouzzani@hbku.edu.qa"
+  github: mouradvt04
+  twitter: mourad_ouzzani
+  rss: false
+  linkedin: mouradouzzani
 #  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  youtube: user/deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
-#  telegram: yourname
-#  calendly: yourname
+#  stackoverflow: ""
+#  snapchat: 
+#  instagram: 
+#  youtube: 
+#  spotify: 
+#  telephone: +97455930096
 
 # --- General options --- #
 
